--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,5 +26,5 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "src/types"]
+  "include": ["src", "src/types", "src/types/react.d.ts"]
 }
